# Lega.AI

./: .dockerignore  .env.example  .env.hf  .gitignore  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  start.sh
.streamlit/: config.toml
src/: __init__.py
src/models/: document.py
src/pages/: analysis.py  library.py  qa_assistant.py  settings.py  upload.py
src/services/: ai_analyzer.py  document_processor.py  vector_store.py
src/utils/: config.py  helpers.py  logger.py
